[gd_scene load_steps=8 format=2]

[ext_resource path="res://components/state_machine/states/game_world/Game.gd" type="Script" id=1]
[ext_resource path="res://components/world/GameWorld.gd" type="Script" id=2]
[ext_resource path="res://components/state_machine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://components/state_machine/states/game_world/Transition.gd" type="Script" id=4]
[ext_resource path="res://components/state_machine/states/game_world/Menu.gd" type="Script" id=5]
[ext_resource path="res://components/state_machine/states/game_world/Pause.gd" type="Script" id=6]
[ext_resource path="res://components/ui/button_group/ButtonGroup.gd" type="Script" id=7]

[node name="GameWorld" type="Node2D"]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Menu")

[node name="Menu" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Game" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Pause" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Transition" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="StateMachine/Transition"]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -2 )
current = true

[node name="UIRoot" type="MarginContainer" parent="Camera2D"]
anchor_bottom = 0.5
margin_left = -342.0
margin_top = -202.0
margin_right = 341.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransitionUI" type="Control" parent="Camera2D/UIRoot"]
visible = false
margin_right = 683.0
margin_bottom = 403.0

[node name="Label" type="Label" parent="Camera2D/UIRoot/TransitionUI"]
margin_left = 307.0
margin_top = 178.0
margin_right = 380.0
margin_bottom = 192.0
text = "Transition"

[node name="MenuUI" type="Control" parent="Camera2D/UIRoot"]
visible = false
margin_right = 683.0
margin_bottom = 403.0

[node name="Label" type="Label" parent="Camera2D/UIRoot/MenuUI"]
margin_left = 321.0
margin_top = 190.0
margin_right = 361.0
margin_bottom = 204.0
text = "Menu"

[node name="PauseUI" type="Control" parent="Camera2D/UIRoot"]
visible = false
margin_right = 683.0
margin_bottom = 403.0

[node name="Label" type="Label" parent="Camera2D/UIRoot/PauseUI"]
margin_left = 321.0
margin_top = 190.0
margin_right = 361.0
margin_bottom = 204.0
text = "Pause"

[node name="GameUI" type="Control" parent="Camera2D/UIRoot"]
visible = false
margin_right = 683.0
margin_bottom = 403.0

[node name="Label" type="Label" parent="Camera2D/UIRoot/GameUI"]
margin_left = 321.0
margin_top = 190.0
margin_right = 361.0
margin_bottom = 204.0
text = "Game"

[node name="GlobalUI" type="Control" parent="Camera2D/UIRoot"]
margin_right = 683.0
margin_bottom = 403.0

[node name="ButtonGroup" type="HBoxContainer" parent="Camera2D/UIRoot/GlobalUI"]
margin_left = 266.0
margin_top = 218.0
margin_right = 420.0
margin_bottom = 248.0
script = ExtResource( 7 )

[node name="PauseButton" type="Button" parent="Camera2D/UIRoot/GlobalUI/ButtonGroup"]
margin_right = 50.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
text = "pause"

[node name="MenuButton" type="Button" parent="Camera2D/UIRoot/GlobalUI/ButtonGroup"]
margin_left = 54.0
margin_right = 103.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
text = "menu"

[node name="GameButton" type="Button" parent="Camera2D/UIRoot/GlobalUI/ButtonGroup"]
margin_left = 107.0
margin_right = 154.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
text = "game"

[node name="Level" type="Node2D" parent="."]
